# welding-robot-ros2-package

custom_srv_pkg/: CMakeLists.txt
custom_srv_pkg/srv/: WeldPose.srv
goal_pub_pkg/: CMakeLists.txt
goal_pub_pkg/src/: welding_robot_server_node.cpp
kinematic_pkg/kinematic_pkg/: ik.py  ik_camera_pose_pub.py  ik_joint_pub.py  ik_server.py  joint_pos.py  pos_endeffector_pub.py
main_pkg/launch/: main.launch.py
main_pkg/main_pkg/: main.py
main_pkg/main_pkg/utils/: utils.py
welding_pkg/: package.xml  setup.py
welding_pkg/welding_pkg/: pcl_color_filter.py  pcl_to_path.py  read_image_to_pointcloud.py  test_node.py  welding_path_node.py  welding_pose_server.py
